--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@notabug/client",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Shared client implementation for notabug.io",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
-  "repository": "https://github.com/go1dfish/@notabug/client",
+  "repository": "https://github.com/notabugio/nab-client",
   "license": "MIT",
   "keywords": [],
   "scripts": {
@@ -50,7 +50,11 @@
   "engines": {
     "node": ">=8.9"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@chaingun/sea-client": "^0.0.23",
+    "@chaingun/socketcluster-connector": "^0.0.7",
+    "@notabug/peer": "^0.36.3"
+  },
   "devDependencies": {
     "@bitjson/npm-scripts-info": "^1.0.0",
     "@bitjson/typedoc": "^0.15.0-0",
