--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@notabug/client",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Shared client implementation for notabug.io",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
@@ -52,13 +52,19 @@
     "node": ">=8.9"
   },
   "dependencies": {
-    "@chaingun/sea-client": "0.0.26",
+    "@chaingun/sea-client": "^0.0.29",
     "@chaingun/socketcluster-connector": "^0.0.7",
-    "@lingua-webca/chaingun": "^0.0.1",
-    "@lingua-webca/core": "^0.0.1",
+    "@lingua-webca/chaingun": "^0.0.4",
+    "@lingua-webca/core": "^0.0.3",
     "@notabug/peer": "^0.38.0",
+    "@types/js-yaml": "^3.12.1",
+    "@types/object-hash": "^1.3.0",
+    "@types/ramda": "^0.26.37",
     "dotenv": "^8.2.0",
+    "js-yaml": "^3.13.1",
+    "object-hash": "^2.0.1",
     "query-string": "^6.9.0",
+    "ramda": "^0.26.1",
     "uri-js": "^4.2.2"
   },
   "devDependencies": {
