--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@notabug/client",
-  "version": "0.0.5",
+  "version": "0.0.7",
   "description": "Shared client implementation for notabug.io",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
@@ -52,9 +52,11 @@
     "node": ">=8.9"
   },
   "dependencies": {
+    "@chaingun/federation-adapter": "^0.0.3",
+    "@chaingun/http-adapter": "^0.5.1",
     "@chaingun/sea-client": "^0.0.29",
     "@chaingun/socketcluster-connector": "^0.0.7",
-    "@lingua-webca/chaingun": "^0.0.4",
+    "@lingua-webca/chaingun": "^0.0.5",
     "@lingua-webca/core": "^0.0.3",
     "@notabug/peer": "^0.38.0",
     "@types/js-yaml": "^3.12.1",
